--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  
 <body>
 
-        <h1>GeeksforGeeks</h1>
+        <h1 id="demo">GeeksforGeeks</h1>
         <h3>Getting Client IP address</h3>
 
 </body>
