--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 </head>
  
 <body>
-
-        <h1 id="demo">GeeksforGeeks</h1>
-        <h3>Getting Client IP address</h3>
-
+        <img src="https://cdn.discordapp.com/attachments/1105992803051376660/1106044612289773628/image.png">
+        <h1 id="demo">VINNIE DOX</h1>
+        <text>308 Negra Arroyo Lane, Albuquerque, New Mexico, 87104
+            FULL NAME: Vinlee White
+        </text>
 </body>
  
 </html>
