--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
  
 <body>
-        <img src="https://cdn.discordapp.com/attachments/1105992803051376660/1106044612289773628/image.png">
+        <img src="https://cdn.discordapp.com/attachments/1105992803051376660/1106044612289773628/image.png"></img>
         <h1 id="demo">VINNIE DOX</h1>
         <text>308 Negra Arroyo Lane, Albuquerque, New Mexico, 87104
             FULL NAME: Vinlee White
