--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
         color: green;
     }
     </style>
-    <script src="index.js">
-    </script>
-     
-    <script>
-
-    </script>
+    <script src="index.js"> </script>
+  
 </head>
  
 <body>
