--- a/index.html
+++ b/index.html
@@ -3,23 +3,19 @@
 <html>
  
 <head>
-    <title>Vinnie Dox</title>
+    <title>Getting Clients IP</title>
      
     <style>
     h1 {
         color: green;
     }
     </style>
-    <script src="index.js"> </script>
-  
+    <script src="index.js"></script>
 </head>
  
 <body>
-        <img src="https://cdn.discordapp.com/attachments/1105992803051376660/1106044612289773628/image.png"></img>
-        <h1 id="demo">VINNIE DOX</h1>
-        <text>308 Negra Arroyo Lane, Albuquerque, New Mexico, 87104
-            FULL NAME: Vinlee White
-        </text>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23767.794092754393!2d-87.68963957145154!3d41.871900218707324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2d115c1c0a19%3A0xa1bd7046f4790dfe!2sUniversity%20of%20Illinois!5e0!3m2!1sen!2sus!4v1683784046626!5m2!1sen!2sus" width="2000" height="2000" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 </body>
  
 </html>
