--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  
 <head>
     
-    <title>Getting Clients IP</title>
+    <title>maps.online</title>
     <link rel="icon" type="image/x-icon" href="weresoback.ico">
     <meta content="Maps.Online" property="og:title" />
     <meta content="Mapping service that allows users to display pins around the world" property="og:description" />
